--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,47 +1,47 @@
-name SonarQube
-on
-  push
-    branches
+name: SonarQube
+on:
+  push:
+    branches:
       - main
-  pull_request
-    types [opened, synchronize, reopened]
-jobs
-  build
-    name Build and analyze
-    runs-on windows-latest
-    steps
-      - name Set up JDK 17
-        uses actionssetup-java@v4
-        with
-          java-version 17
-          distribution 'zulu' # Alternative distribution options are available
-      - uses actionscheckout@v4
-        with
-          fetch-depth 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name Cache SonarQube Cloud packages
-        uses actionscache@v4
-        with
-          path ~sonarcache
-          key ${{ runner.os }}-sonar
-          restore-keys ${{ runner.os }}-sonar
-      - name Cache SonarQube Cloud scanner
-        id cache-sonar-scanner
-        uses actionscache@v4
-        with
-          path ..sonarscanner
-          key ${{ runner.os }}-sonar-scanner
-          restore-keys ${{ runner.os }}-sonar-scanner
-      - name Install SonarQube Cloud scanner
-        if steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell powershell
-        run 
-          New-Item -Path ..sonarscanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path ..sonarscanner
-      - name Build and analyze
-        env
-          SONAR_TOKEN ${{ secrets.SONAR_TOKEN }}
-        shell powershell
-        run 
-          ..sonarscannerdotnet-sonarscanner begin kJanisRoth_SonarCloudDevDay ojanisroth dsonar.token=${{ secrets.SONAR_TOKEN }} dsonar.host.url=httpssonarcloud.io
+  pull_request:
+    types: [opened, synchronize, reopened]
+jobs:
+  build:
+    name: Build and analyze
+    runs-on: windows-latest
+    steps:
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu' # Alternative distribution options are available.
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Cache SonarQube Cloud packages
+        uses: actions/cache@v4
+        with:
+          path: ~\sonar\cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache SonarQube Cloud scanner
+        id: cache-sonar-scanner
+        uses: actions/cache@v4
+        with:
+          path: .\.sonar\scanner
+          key: ${{ runner.os }}-sonar-scanner
+          restore-keys: ${{ runner.os }}-sonar-scanner
+      - name: Install SonarQube Cloud scanner
+        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
+        shell: powershell
+        run: |
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+      - name: Build and analyze
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        shell: powershell
+        run: |
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"JanisRoth_SonarCloudDevDay" /o:"janisroth" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build
-          ..sonarscannerdotnet-sonarscanner end dsonar.token=${{ secrets.SONAR_TOKEN }}
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
